--- a/test.html
+++ b/test.html
@@ -1,11 +1,15 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="test.css">
 		<title>Testing...</title>
 		<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 
 	<body>
+
+		<div id="spnCursor2">
+		</div>
 		<div id="spnCursor">
 		</div>
 	</body>
