--- a/test.html
+++ b/test.html
@@ -8,7 +8,9 @@
 
 	<body>
 
-		<div id="spnCursor2">
+		<div id="spnCursor2" onClick="extra(this.id)">
+		</div>
+		<div id="spnCursor3" onClick="extra(this.id)">
 		</div>
 		<div id="spnCursor">
 		</div>
