--- a/test.html
+++ b/test.html
@@ -14,7 +14,8 @@
 		</div>
 		<div id="spnCursor">
 		</div>
-		<div onClick="extra(this.id)">
+		<div id = "changeFont"
+		 onclick="extra(this.id)">
 			<p>Change in Font</p>
 		</div>
 	</body>
