Updating main.js for firefox

--- a/test.html
+++ b/test.html
@@ -1,3 +1,8 @@
+<!--
+This file is made just for demonstration, testing and debugging purposes.
+No need to include this file in your project folder.
+-->
+
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="test.css">
@@ -14,8 +19,7 @@
 		</div>
 		<div id="spnCursor">
 		</div>
-		<div id = "changeFont"
-		 onclick="extra(this.id)">
+		<div id = "changeFont" onclick="extra(this.id)">
 			<p>Change in Font</p>
 		</div>
 	</body>
