--- a/test.html
+++ b/test.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
 	<head>
+		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="test.css">
 		<title>Testing...</title>
 		<script type="text/javascript" src="jquery-2.1.4.min.js"></script>
