--- a/test.html
+++ b/test.html
@@ -1,13 +1,4 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
-=======
-<!--
-This file is made just for demonstration, testing and debugging purposes.
-No need to include this file in your project folder.
--->
-
-<html>
->>>>>>> 5546c46047a1cda6471654900cc36856cba71c5d
 	<head>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="test.css">
@@ -24,7 +15,8 @@ No need to include this file in your project folder.
 		</div>
 		<div id="spnCursor">
 		</div>
-		<div id = "changeFont" onclick="extra(this.id)">
+		<div id = "changeFont"
+		 onclick="extra(this.id)">
 			<p>Change in Font</p>
 		</div>
 	</body>
