Updated equality and added a bug

--- a/test.html
+++ b/test.html
@@ -15,8 +15,7 @@
 		</div>
 		<div id="spnCursor">
 		</div>
-		<div id = "changeFont"
-		 onclick="extra(this.id)">
+		<div id = "changeFont" onclick="extra(this.id)">
 			<p>Change in Font</p>
 		</div>
 	</body>
